exports[`Tabs renders correctly 1`] = `
Array [
  Object {
    "attributes": Object {
      "className": Array [
        "uk-flex",
        "uk-flex-column-reverse",
      ],
    },
    "children": Array [
      Object {
        "attributes": Object {
          "className": Array [
            "uk-tab-center",
            "uk-tab-center-bottom",
          ],
        },
        "children": Array [
          Object {
            "attributes": Object {
              "className": Array [
                "uk-tab",
                "uk-tab-grid",
                "uk-tab-flip",
                "uk-tab-bottom",
              ],
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "uk-width-1-1",
                    "uk-active",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "content": "
      Tab 1
    ",
                        "type": "Text",
                      },
                    ],
                    "tagName": "a",
                    "type": "Element",
                  },
                ],
                "tagName": "li",
                "type": "Element",
              },
              Object {
                "content": " ",
                "type": "Text",
              },
              Object {
                "attributes": Object {
                  "className": Array [
                    "uk-width-1-1",
                    "uk-disabled",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "content": "
      Tab 2
    ",
                        "type": "Text",
                      },
                    ],
                    "tagName": "a",
                    "type": "Element",
                  },
                ],
                "tagName": "li",
                "type": "Element",
              },
              Object {
                "content": " ",
                "type": "Text",
              },
              Object {
                "attributes": Object {
                  "className": Array [
                    "uk-width-1-1",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "content": "Header from slot",
                        "type": "Text",
                      },
                    ],
                    "tagName": "a",
                    "type": "Element",
                  },
                ],
                "tagName": "li",
                "type": "Element",
              },
            ],
            "tagName": "ul",
            "type": "Element",
          },
        ],
        "tagName": "div",
        "type": "Element",
      },
      Object {
        "content": " ",
        "type": "Text",
      },
      Object {
        "attributes": Object {
          "className": Array [
            "uk-margin",
          ],
        },
        "children": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "content": "Content Tab 1",
                "type": "Text",
              },
            ],
            "tagName": "div",
            "type": "Element",
          },
        ],
        "tagName": "div",
        "type": "Element",
      },
    ],
    "tagName": "div",
    "type": "Element",
  },
]
`;

exports[`Tabs renders correctly verticaly 1`] = `
Array [
  Object {
    "attributes": Object {
      "className": Array [
        "uk-grid",
        "uk-flex",
        "uk-flex-row-reverse",
      ],
    },
    "children": Array [
      Object {
        "attributes": Object {
          "className": Array [
            "uk-width-medium-1-1",
          ],
        },
        "children": Array [
          Object {
            "attributes": Object {
              "className": Array [
                "uk-tab",
                "uk-tab-right",
              ],
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "className": Array [
                    "uk-active",
                  ],
                },
                "children": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "content": "
      
    ",
                        "type": "Text",
                      },
                    ],
                    "tagName": "a",
                    "type": "Element",
                  },
                ],
                "tagName": "li",
                "type": "Element",
              },
            ],
            "tagName": "ul",
            "type": "Element",
          },
        ],
        "tagName": "div",
        "type": "Element",
      },
      Object {
        "content": " ",
        "type": "Text",
      },
      Object {
        "attributes": Object {
          "className": Array [
            "uk-width-medium-1-2",
          ],
        },
        "children": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "content": "Content Tab 1",
                    "type": "Text",
                  },
                ],
                "tagName": "div",
                "type": "Element",
              },
            ],
            "tagName": "div",
            "type": "Element",
          },
        ],
        "tagName": "div",
        "type": "Element",
      },
    ],
    "tagName": "div",
    "type": "Element",
  },
]
`;
